--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,15 +9,38 @@
     <string name="regist_btn_text">注册</string>
     <string name="login_title">用户登录</string>
     <string name="regist_title">注册新用户</string>
-    <string name="login_tip_user">手机号/用户ID</string>
+    <string name="login_tip_user">学号/用户ID</string>
     <string name="login_tip_pwd">请输入登录密码</string>
     <string name="login_regist">没有账号 去注册</string>
     <string name="regist_login">已有账号 去登录</string>
-    <string name="regist_tip_user">请输入您的手机号</string>
+    <string name="regist_tip_user">请输入您的学号</string>
     <string name="regist_tip_pwd1">请设置您密码</string>
     <string name="regist_tip_pwd2">请重复上面密码</string>
     <string name="demo">这是个启动界面和引导界面的Demo</string>
     <string name="welcome">这是欢迎界面的demo</string>
     <string name="bt_dl">登录</string>
     <string name="bt_zc">注册</string>
+    <string name="title_activity_desktop">Desktop</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="userinfo">个人信息</string>
+    <string name="classtable">课程表</string>
+    <string name="classsign">课堂签到</string>
+    <string name="homework">课下作业</string>
 </resources>
